# TCG

./: README.md  build.cmd
resources/: Rate by rarity.csv  Repartition by deck and rarity.csv
src/: CMakeLists.txt  TCG.cpp
